--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,13 @@
 name: AutoUpdate FTP
 
-on: 
-  push:
-    branches:
-    - master
+on: push
 
 jobs:
   FTP-Action:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Upload to FTP
+    - name: Upload FTP
       uses: sebastianpopp/ftp-action@v1.0.0
       with: 
         host: files.000webhost.com
