--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Upload FTP
       uses: sebastianpopp/ftp-action@v1.0.0
       with: 
-        host: files.000webhost.com
+        host: ftp.cluster027.hosting.ovh.net
         user: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         remoteDir: "public_html"
